thirdparty/include/libs/raylib55/include/raylib.h

    typedef enum bool { false = 0, true = !false } bool;
typedef struct RLVector2 {
    float x;                
    float y;                
} RLVector2;
typedef struct RLVector3 {
    float x;                
    float y;                
    float z;                
} RLVector3;
typedef struct RLVector4 {
    float x;                
    float y;                
    float z;                
    float w;                
} RLVector4;
typedef struct RLColor {
    unsigned char r;        
    unsigned char g;        
    unsigned char b;        
    unsigned char a;        
} RLColor;
typedef struct RLRectangle {
    float x;                
    float y;                
    float width;            
    float height;           
} RLRectangle;
typedef struct RLImage {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} RLImage;
typedef struct RLTexture {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} RLTexture;
typedef RLTexture RLTexture2D;
typedef RLTexture TextureCubemap;
typedef struct RLRenderTexture {
    unsigned int id;        
    RLTexture texture;        
    RLTexture depth;          
} RLRenderTexture;
typedef RLRenderTexture RLRenderTexture2D;
typedef struct NPatchInfo {
    RLRectangle source;       
    int left;               
    int top;                
    int right;              
    int bottom;             
    int layout;             
} NPatchInfo;
typedef struct GlyphInfo {
    int value;              
    int offsetX;            
    int offsetY;            
    int advanceX;           
    RLImage image;            
} GlyphInfo;
typedef struct RLFont {
    int baseSize;           
    int glyphCount;         
    int glyphPadding;       
    RLTexture2D texture;      
    RLRectangle *recs;        
    GlyphInfo *glyphs;      
} RLFont;
typedef enum {
    PIXELFORMAT_UNCOMPRESSED_GRAYSCALE = 1, 
    PIXELFORMAT_UNCOMPRESSED_GRAY_ALPHA,    
    PIXELFORMAT_UNCOMPRESSED_R5G6B5,        
    PIXELFORMAT_UNCOMPRESSED_R8G8B8,        
    PIXELFORMAT_UNCOMPRESSED_R5G5B5A1,      
    PIXELFORMAT_UNCOMPRESSED_R4G4B4A4,      
    PIXELFORMAT_UNCOMPRESSED_R8G8B8A8,      
    PIXELFORMAT_UNCOMPRESSED_R32,           
    PIXELFORMAT_UNCOMPRESSED_R32G32B32,     
    PIXELFORMAT_UNCOMPRESSED_R32G32B32A32,  
    PIXELFORMAT_UNCOMPRESSED_R16,           
    PIXELFORMAT_UNCOMPRESSED_R16G16B16,     
    PIXELFORMAT_UNCOMPRESSED_R16G16B16A16,  
    PIXELFORMAT_COMPRESSED_DXT1_RGB,        
    PIXELFORMAT_COMPRESSED_DXT1_RGBA,       
    PIXELFORMAT_COMPRESSED_DXT3_RGBA,       
    PIXELFORMAT_COMPRESSED_DXT5_RGBA,       
    PIXELFORMAT_COMPRESSED_ETC1_RGB,        
    PIXELFORMAT_COMPRESSED_ETC2_RGB,        
    PIXELFORMAT_COMPRESSED_ETC2_EAC_RGBA,   
    PIXELFORMAT_COMPRESSED_PVRT_RGB,        
    PIXELFORMAT_COMPRESSED_PVRT_RGBA,       
    PIXELFORMAT_COMPRESSED_ASTC_4x4_RGBA,   
    PIXELFORMAT_COMPRESSED_ASTC_8x8_RGBA    
} RLPixelFormat;
typedef enum {
    TEXTURE_FILTER_POINT = 0,               
    TEXTURE_FILTER_BILINEAR,                
    TEXTURE_FILTER_TRILINEAR,               
    TEXTURE_FILTER_ANISOTROPIC_4X,          
    TEXTURE_FILTER_ANISOTROPIC_8X,          
    TEXTURE_FILTER_ANISOTROPIC_16X,         
} RLTextureFilter;
RLAPI RLTexture2D LoadTexture(const char *fileName);                                                       
RLAPI RLTexture2D LoadTextureFromImage(RLImage image);                                                       
RLAPI TextureCubemap LoadTextureCubemap(RLImage image, int layout);                                        
RLAPI RLRenderTexture2D LoadRenderTexture(int width, int height);                                          
RLAPI bool IsTextureValid(RLTexture2D texture);                                                            
RLAPI void UnloadTexture(RLTexture2D texture);                                                             
RLAPI bool IsRenderTextureValid(RLRenderTexture2D target);                                                 
RLAPI void UnloadRenderTexture(RLRenderTexture2D target);                                                  
RLAPI void UpdateTexture(RLTexture2D texture, const void *pixels);                                         
RLAPI void UpdateTextureRec(RLTexture2D texture, RLRectangle rec, const void *pixels);                       
RLAPI void GenTextureMipmaps(RLTexture2D *texture);                                                        
RLAPI void SetTextureFilter(RLTexture2D texture, int filter);                                              
RLAPI void SetTextureWrap(RLTexture2D texture, int wrap);                                                  
RLAPI void DrawTexture(RLTexture2D texture, int posX, int posY, RLColor tint);                               
RLAPI void DrawTextureV(RLTexture2D texture, RLVector2 position, RLColor tint);                                
RLAPI void DrawTextureEx(RLTexture2D texture, RLVector2 position, float rotation, float scale, RLColor tint);  
RLAPI void DrawTextureRec(RLTexture2D texture, RLRectangle source, RLVector2 position, RLColor tint);            
RLAPI void DrawTexturePro(RLTexture2D texture, RLRectangle source, RLRectangle dest, RLVector2 origin, float rotation, RLColor tint); 
RLAPI void DrawTextureNPatch(RLTexture2D texture, NPatchInfo nPatchInfo, RLRectangle dest, RLVector2 origin, float rotation, RLColor tint); 
RLAPI bool ColorIsEqual(RLColor col1, RLColor col2);                            
RLAPI RLColor Fade(RLColor color, float alpha);                                 
RLAPI int ColorToInt(RLColor color);                                          
RLAPI RLVector4 ColorNormalize(RLColor color);                                  
RLAPI RLColor ColorFromNormalized(RLVector4 normalized);                        
RLAPI RLVector3 ColorToHSV(RLColor color);                                      
RLAPI RLColor ColorFromHSV(float hue, float saturation, float value);         
RLAPI RLColor ColorTint(RLColor color, RLColor tint);                             
RLAPI RLColor ColorBrightness(RLColor color, float factor);                     
RLAPI RLColor ColorContrast(RLColor color, float contrast);                     
RLAPI RLColor ColorAlpha(RLColor color, float alpha);                           
RLAPI RLColor ColorAlphaBlend(RLColor dst, RLColor src, RLColor tint);              
RLAPI RLColor ColorLerp(RLColor color1, RLColor color2, float factor);            
RLAPI RLColor GetColor(unsigned int hexValue);                                
RLAPI RLColor GetPixelColor(void *srcPtr, int format);                        
RLAPI void SetPixelColor(void *dstPtr, RLColor color, int format);            
RLAPI int GetPixelDataSize(int width, int height, int format);              
RLAPI RLFont GetFontDefault(void);                                                            
RLAPI RLFont LoadFont(const char *fileName);                                                  
RLAPI RLFont LoadFontEx(const char *fileName, int fontSize, int *codepoints, int codepointCount); 
RLAPI RLFont LoadFontFromImage(RLImage image, RLColor key, int firstChar);                        
RLAPI RLFont LoadFontFromMemory(const char *fileType, const unsigned char *fileData, int dataSize, int fontSize, int *codepoints, int codepointCount); 
RLAPI bool IsFontValid(RLFont font);                                                          
RLAPI GlyphInfo *LoadFontData(const unsigned char *fileData, int dataSize, int fontSize, int *codepoints, int codepointCount, int type); 
RLAPI RLImage GenImageFontAtlas(const GlyphInfo *glyphs, RLRectangle **glyphRecs, int glyphCount, int fontSize, int padding, int packMethod); 
RLAPI void UnloadFontData(GlyphInfo *glyphs, int glyphCount);                               
RLAPI void UnloadFont(RLFont font);                                                           
RLAPI bool ExportFontAsCode(RLFont font, const char *fileName);                               
RLAPI void DrawFPS(int posX, int posY);                                                     
RLAPI void DrawText(const char *text, int posX, int posY, int fontSize, RLColor color);       
RLAPI void DrawTextEx(RLFont font, const char *text, RLVector2 position, float fontSize, float spacing, RLColor tint); 
RLAPI void DrawTextPro(RLFont font, const char *text, RLVector2 position, RLVector2 origin, float rotation, float fontSize, float spacing, RLColor tint); 
RLAPI void DrawTextCodepoint(RLFont font, int codepoint, RLVector2 position, float fontSize, RLColor tint); 
RLAPI void DrawTextCodepoints(RLFont font, const int *codepoints, int codepointCount, RLVector2 position, float fontSize, float spacing, RLColor tint); 
RLAPI void SetTextLineSpacing(int spacing);                                                 
RLAPI int MeasureText(const char *text, int fontSize);                                      
RLAPI RLVector2 MeasureTextEx(RLFont font, const char *text, float fontSize, float spacing);    
RLAPI int GetGlyphIndex(RLFont font, int codepoint);                                          
RLAPI GlyphInfo GetGlyphInfo(RLFont font, int codepoint);                                     
RLAPI RLRectangle GetGlyphAtlasRec(RLFont font, int codepoint);                                 
RLAPI char *LoadUTF8(const int *codepoints, int length);                
RLAPI void UnloadUTF8(char *text);                                      
RLAPI int *LoadCodepoints(const char *text, int *count);                
RLAPI void UnloadCodepoints(int *codepoints);                           
RLAPI int GetCodepointCount(const char *text);                          
RLAPI int GetCodepoint(const char *text, int *codepointSize);           
RLAPI int GetCodepointNext(const char *text, int *codepointSize);       
RLAPI int GetCodepointPrevious(const char *text, int *codepointSize);   
RLAPI const char *CodepointToUTF8(int codepoint, int *utf8Size);        