engine/thirdparty/raylib55.c3i


// RLTexture loading functions
// NOTE: These functions require GPU access
// Load texture from file into GPU memory (VRAM)
fn RLTexture2D loadTexture(ZString fileName) @cname("LoadTexture");
// Load texture from image data
fn RLTexture2D loadTextureFromImage(RLImage image) @cname("LoadTextureFromImage");
// Load cubemap from image, multiple image cubemap layouts supported
fn RLTextureCubemap loadTextureCubemap(RLImage image, CInt layout) @cname("LoadTextureCubemap");
// Load texture for rendering (framebuffer)
fn RLRenderTexture2D loadRenderTexture(CInt width, CInt height) @cname("LoadRenderTexture");
// Check if a texture is valid (loaded in GPU)
fn bool isTextureValid(RLTexture2D texture) @cname("IsTextureValid");
// Unload texture from GPU memory (VRAM)
fn void unloadTexture(RLTexture2D texture) @cname("UnloadTexture");
// Check if a render texture is valid (loaded in GPU)
fn bool isRenderTextureValid(RLRenderTexture2D target) @cname("IsRenderTextureValid");
// Unload render texture from GPU memory (VRAM)
fn void unloadRenderTexture(RLRenderTexture2D target) @cname("UnloadRenderTexture");
// Update GPU texture with new data
fn void updateTexture(RLTexture2D texture, void* pixels) @cname("UpdateTexture");
// Update GPU texture rectangle with new data
fn void updateTextureRec(RLTexture2D texture, RLRectangle rec, void* pixels) @cname("UpdateTextureRec");

// RLTexture configuration functions
// Generate GPU mipmaps for a texture
fn void genTextureMipmaps(RLTexture2D* texture) @cname("GenTextureMipmaps");
// Set texture scaling filter mode
fn void setTextureFilter(RLTexture2D texture, RLTextureFilter filter) @cname("SetTextureFilter");
// Set texture wrapping mode
fn void setTextureWrap(RLTexture2D texture, CInt wrap) @cname("SetTextureWrap");

// RLTexture drawing functions
// Draw a RLTexture2D
fn void drawTexture(RLTexture2D texture, CInt posX, CInt posY, RLColor tint) @cname("DrawTexture");
// Draw a RLTexture2D with position defined as RLVector2
fn void drawTextureV(RLTexture2D texture, RLVector2 position, RLColor tint) @cname("DrawTextureV");
// Draw a RLTexture2D with extended parameters
fn void drawTextureEx(RLTexture2D texture, RLVector2 position, float rotation, float scale, RLColor tint) @cname("DrawTextureEx");
// Draw a part of a texture defined by a rectangle
fn void drawTextureRec(RLTexture2D texture, RLRectangle source, RLVector2 position, RLColor tint) @cname("DrawTextureRec");
// Draw a part of a texture defined by a rectangle with 'pro' parameters
fn void drawTexturePro(RLTexture2D texture, RLRectangle source, RLRectangle dest, RLVector2 origin, float rotation, RLColor tint) @cname("DrawTexturePro");
// Draws a texture (or part of it) that stretches or shrinks nicely
fn void drawTextureNPatch(RLTexture2D texture, NPatchInfo nPatchInfo, RLRectangle dest, RLVector2 origin, float rotation, RLColor tint) @cname("DrawTextureNPatch");

// RLColor/pixel related functions
// Check if two colors are equal
fn bool colorIsEqual(RLColor col1, RLColor col2) @cname("ColorIsEqual");
// Get color with alpha applied, alpha goes from 0.0f to 1.0f
fn RLColor fade(RLColor color, float alpha) @cname("Fade");
//  Get hexadecimal value for a RLColor (0xRRGGBBAA)
fn CInt colorToInt(RLColor color) @cname("ColorToInt");
// Get RLColor normalized as float [0..1]
fn RLVector4 colorNormalize(RLColor color) @cname("ColorNormalize");
// Get RLColor from normalized values [0..1]
fn RLColor colorFromNormalized(RLVector4 normalized) @cname("ColorFromNormalized");
// Get HSV values for a RLColor, hue [0..360], saturation/value [0..1]
fn RLVector3 colorToHSV(RLColor color) @cname("ColorToHSV");
// Get a RLColor from HSV values, hue [0..360], saturation/value [0..1]
fn RLColor colorFromHSV(float hue, float saturation, float value) @cname("ColorFromHSV");
// Get color multiplied with another color
fn RLColor colorTint(RLColor color, RLColor tint) @cname("ColorTint");
// Get color with brightness correction, brightness factor goes from -1.0f to 1.0f
fn RLColor colorBrightness(RLColor color, float factor) @cname("ColorBrightness");
// Get color with contrast correction, contrast values between -1.0f and 1.0f
fn RLColor colorContrast(RLColor color, float contrast) @cname("ColorContrast");
// Get color with alpha applied, alpha goes from 0.0f to 1.0f
fn RLColor colorAlpha(RLColor color, float alpha) @cname("ColorAlpha");
// Get src alpha-blended into dst color with tint
fn RLColor colorAlphaBlend(RLColor dst, RLColor src, RLColor tint) @cname("ColorAlphaBlend");
// Get color lerp interpolation between two colors, factor [0.0f..1.0f]
fn  RLColor colorLerp(RLColor color1, RLColor color2, float factor) @cname("ColorLerp");
// Get RLColor structure from hexadecimal value
fn RLColor getColor(CUInt hexValue) @cname("GetColor");
// Get RLColor from a source pixel pointer of certain format
fn RLColor getPixelColor(void* srcPtr, CInt format) @cname("GetPixelColor");
// Set color formatted into destination pixel pointer
fn void setPixelColor(void* dstPtr, RLColor color, RLPixelFormat format) @cname("SetPixelColor");
// Get pixel data size in bytes for certain format
fn CInt getPixelDataSize(CInt width, CInt height, RLPixelFormat format) @cname("GetPixelDataSize");

//------------------------------------------------------------------------------------
// RLFont Loading and Text Drawing Functions (Module: text)
//------------------------------------------------------------------------------------

// RLFont loading/unloading functions
// Get the default RLFont
fn RLFont getFontDefault() @cname("GetFontDefault");
// Load font from file into GPU memory (VRAM)
fn RLFont loadFont(ZString fileName) @cname("LoadFont");
// Load font from file with extended parameters, use NULL for fontChars and 0 for glyphCount to load the default character set
fn RLFont loadFontEx(ZString fileName, CInt fontSize, CInt* fontChars, CInt glyphCount) @cname("LoadFontEx");
// Load font from RLImage (XNA style)
fn RLFont loadFontFromImage(RLImage image, RLColor key, CInt firstChar) @cname("LoadFontFromImage");
// Load font from memory buffer, fileType refers to extension: i.e. '.ttf'
fn RLFont loadFontFromMemory(ZString fileType, char* fileData, CInt dataSize, CInt fontSize, CInt* fontChars, CInt glyphCount) @cname("LoadFontFromMemory");
// Check if a font is valid (font data loaded, WARNING: GPU texture not checked)
fn bool isFontValid(RLFont font) @cname("IsFontValid");
// Load font data for further use
fn GlyphInfo* loadFontData(char* fileData, CInt dataSize, CInt fontSize, CInt *fontChars, CInt glyphCount, CInt type) @cname("LoadFontData");
// Generate image font atlas using chars info
fn RLImage genImageFontAtlas(GlyphInfo* chars, RLRectangle **recs, CInt glyphCount, CInt fontSize, CInt padding, CInt packMethod) @cname("GenImageFontAtlas");
// Unload font chars info data (RAM)
fn void unloadFontData(GlyphInfo* chars, CInt glyphCount) @cname("UnloadFontData");
// Unload font from GPU memory (VRAM)
fn void unloadFont(RLFont font) @cname("UnloadFont");
// Export font as code file, returns true on success
fn bool exportFontAsCode(RLFont font, ZString fileName) @cname("ExportFontAsCode");


// Text drawing functions
// Draw current FPS
fn void drawFPS(CInt posX, CInt posY) @cname("DrawFPS");
// Draw text (using default font)
fn void drawText(ZString text, CInt posX, CInt posY, CInt fontSize, RLColor color) @cname("DrawText");
// Draw text using font and additional parameters
fn void drawTextEx(RLFont font, ZString text, RLVector2 position, float fontSize, float spacing, RLColor tint) @cname("DrawTextEx");
// Draw text using RLFont and pro parameters (rotation)
fn void drawTextPro(RLFont font, ZString text, RLVector2 position, RLVector2 origin, float rotation, float fontSize, float spacing, RLColor tint) @cname("DrawTextPro");
// Draw one character (codepoint)
fn void drawTextCodepoint(RLFont font, CInt codepoint, RLVector2 position, float fontSize, RLColor tint) @cname("DrawTextCodepoint");
// Draw multiple character (codepoint)
fn void drawTextCodepoints(RLFont font, CInt* codepoints, CInt count, RLVector2 position, float fontSize, float spacing, RLColor tint) @cname("DrawTextCodepoints");

// Text font info functions
// Set vertical line spacing when drawing with line-breaks
fn void setTextLineSpacing(CInt spacing) @cname("SetTextLineSpacing");
// Measure string width for default font
fn CInt measureText(ZString text, CInt fontSize) @cname("MeasureText");
// Measure string size for RLFont
fn RLVector2 measureTextEx(RLFont font, ZString text, float fontSize, float spacing) @cname("MeasureTextEx");
// Get glyph index position in font for a codepoint (unicode character), fallback to '?' if not found
fn CInt getGlyphIndex(RLFont font, CInt codepoint) @cname("GetGlyphIndex");
// Get glyph font info data for a codepoint (unicode character), fallback to '?' if not found
fn GlyphInfo getGlyphInfo(RLFont font, CInt codepoint) @cname("GetGlyphInfo");
// Get glyph rectangle in font atlas for a codepoint (unicode character), fallback to '?' if not found
fn RLRectangle getGlyphAtlasRec(RLFont font, CInt codepoint) @cname("GetGlyphAtlasRec");

// Text codepoints management functions (unicode characters)
// Load UTF-8 text encoded from codepoints array
fn ZString loadUTF8(CInt *codepoints, CInt length) @cname("LoadUTF8");
// Unload UTF-8 text encoded from codepoints array
fn void unloadUTF8(ZString text) @cname("UnloadUTF8");
// Load all codepoints from a UTF-8 text string, codepoints count returned by parameter
fn CInt* loadCodepoints(ZString text, CInt* count) @cname("LoadCodepoints");
// Unload codepoints data from memory
fn void unloadCodepoints(CInt* codepoints) @cname("UnloadCodepoints");
// Get total number of codepoints in a UTF-8 encoded string
fn CInt getCodepointCount(ZString text) @cname("GetCodepointCount");
// Get next codepoint in a UTF-8 encoded string, 0x3f('?') is returned on failure
fn CInt getCodepoint(ZString text, CInt *bytesProcessed) @cname("GetCodepoint");
// Get next codepoint in a UTF-8 encoded string, 0x3f('?') is returned on failure
fn CInt getCodepointNext(ZString text, CInt *codepointSize) @cname("GetCodepointNext");
// Get previous codepoint in a UTF-8 encoded string, 0x3f('?') is returned on failure
fn CInt getCodepointPrevious(ZString text, CInt *codepointSize) @cname("GetCodepointPrevious");
// Encode one codepoint into UTF-8 byte array (array length returned as parameter)
fn ZString codepointToUTF8(CInt codepoint, CInt* byteSize) @cname("CodepointToUTF8");

